Improved on Message Command Handler
Issues: Repeated logic