@@ -1,7 +1,7 @@
 package org.bunnys.handler.commands.message;
 
-import java.util.List;
-import java.util.Objects;
+import net.dv8tion.jda.api.Permission;
+import java.util.*;
 
 @SuppressWarnings("unused")
 public final class MessageCommandConfig {
@@ -9,12 +9,20 @@ public final class MessageCommandConfig {
     private final String commandDescription;
     private final String commandUsage;
     private final List<String> aliases;
+    private final EnumSet<Permission> userPermissions;
+    private final EnumSet<Permission> botPermissions;
+    private final boolean devOnly;
+    private final long cooldownMS;
 
     private MessageCommandConfig(Builder builder) {
         this.commandName = Objects.requireNonNull(builder.commandName, "Command name is required");
         this.commandDescription = builder.commandDescription;
         this.commandUsage = builder.commandUsage;
         this.aliases = List.copyOf(builder.aliases);
+        this.userPermissions = EnumSet.copyOf(builder.userPermissions);
+        this.botPermissions = EnumSet.copyOf(builder.botPermissions);
+        this.devOnly = builder.devOnly;
+        this.cooldownMS = builder.cooldownMS;
     }
 
     public String commandName() {
@@ -33,6 +41,25 @@ public final class MessageCommandConfig {
         return List.copyOf(this.aliases);
     }
 
+    public EnumSet<Permission> userPermissions() {
+        return EnumSet.copyOf(this.userPermissions);
+    }
+
+    public EnumSet<Permission> botPermissions() {
+        return EnumSet.copyOf(this.botPermissions);
+    }
+
+    public boolean devOnly() {
+        return this.devOnly;
+    }
+
+    /**
+     * Cooldown in milliseconds
+     */
+    public long cooldown() {
+        return this.cooldownMS;
+    }
+
     // --------------------- Builder --------------------//
     @SuppressWarnings("unused")
     public static final class Builder {
@@ -40,12 +67,15 @@ public final class MessageCommandConfig {
         private String commandDescription = "No description provided";
         private String commandUsage = "No usage provided";
         private List<String> aliases = List.of();
+        private EnumSet<Permission> userPermissions = EnumSet.noneOf(Permission.class);
+        private EnumSet<Permission> botPermissions = EnumSet.noneOf(Permission.class);
+        private boolean devOnly = false;
+        private long cooldownMS = 0; // No cooldown by default
 
         public Builder name(String commandName) {
             if (commandName == null || commandName.isBlank())
                 throw new IllegalArgumentException("Command name cannot be null or blank");
-
-            this.commandName = commandName;
+            this.commandName = commandName.trim();
             return this;
         }
 
@@ -60,25 +90,70 @@ public final class MessageCommandConfig {
         }
 
         public Builder aliases(List<String> aliases) {
-            this.aliases = aliases == null ? List.of() : List.copyOf(aliases);
+            if (aliases == null || aliases.isEmpty()) {
+                this.aliases = List.of();
+                return this;
+            }
+            LinkedHashSet<String> seen = new LinkedHashSet<>();
+            for (String a : aliases) {
+                if (a == null)
+                    continue;
+                String t = a.trim();
+                if (t.isEmpty())
+                    continue;
+                seen.add(t);
+            }
+            this.aliases = List.copyOf(seen);
             return this;
         }
 
         public Builder aliases(String... aliases) {
             if (aliases == null || aliases.length == 0)
-                this.aliases = List.of();
-            else
-                this.aliases = List.of(aliases);
+                return aliases(List.of());
+            return aliases(Arrays.asList(aliases));
+        }
+
+        public Builder userPermissions(Permission... permissions) {
+            this.userPermissions = permissions == null ? EnumSet.noneOf(Permission.class)
+                    : EnumSet.copyOf(Arrays.asList(permissions));
+            return this;
+        }
+
+        public Builder botPermissions(Permission... permissions) {
+            this.botPermissions = permissions == null ? EnumSet.noneOf(Permission.class)
+                    : EnumSet.copyOf(Arrays.asList(permissions));
+            return this;
+        }
+
+        public Builder devOnly(boolean devOnly) {
+            this.devOnly = devOnly;
+            return this;
+        }
+
+        public Builder cooldown(long seconds) {
+            if (seconds < 0)
+                throw new IllegalArgumentException("Cooldown cannot be negative");
+            this.cooldownMS = seconds * 1000;
             return this;
         }
 
         public MessageCommandConfig build() {
+            if (this.commandName == null || this.commandName.isBlank())
+                throw new IllegalStateException("Command name is required (call name(...))");
+
+            String cnLower = this.commandName.toLowerCase(Locale.ROOT);
+            List<String> filtered = this.aliases.stream()
+                    .filter(a -> !a.equalsIgnoreCase(cnLower))
+                    .toList();
+
+            this.aliases = List.copyOf(filtered);
             return new MessageCommandConfig(this);
         }
     }
 
     @Override
     public String toString() {
-        return "MessageCommandConfig{name='%s', aliases=%s}".formatted(this.commandName, this.aliases);
+        return "MessageCommandConfig{name='%s', aliases=%s, devOnly=%s}".formatted(
+                this.commandName, this.aliases, this.devOnly);
     }
 }
